--- a/systemd/sailfish-device-encryption-community-wizard.service
+++ b/systemd/sailfish-device-encryption-community-wizard.service
@@ -11,6 +11,7 @@ EnvironmentFile=-/var/lib/environment/compositor/*.conf
 ExecStartPre=/usr/bin/sailfish-device-encryption-community-wizard $LIPSTICK_OPTIONS
 ExecStartPre=-/system/bin/stop vendor.hwcomposer-2-3
 ExecStartPre=-/system/bin/start vendor.hwcomposer-2-3
+ExecStart=/bin/echo Device Encryption Setup Wizard Done
 Restart=no
 
 [Install]
