--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(sailfish-device-encryption-community-wizard
     DESCRIPTION "Startup Wizard for Device Encryption"
 )
 
-find_package (Qt5 COMPONENTS Core Qml Gui Quick REQUIRED)
+find_package (Qt5 COMPONENTS Core Qml Gui Quick LinguistTools REQUIRED)
 
 include(FindPkgConfig)
 pkg_search_module(SAILFISH sailfishapp REQUIRED)
@@ -24,21 +24,35 @@ file(GLOB QML_SRC qml/*.qml)
 file(GLOB CXX_SRC src/*.cpp)
 file(GLOB CXX_HEADERS src/*.h)
 
-## Translations
-FILE(GLOB TsFiles "translations/*.ts")
-
 add_custom_target(Sources SOURCES
     ${QML_SRC}
     ${CXX_SRC} ${CXX_HEADERS}
-    ${TsFiles}
     rpm/sailfish-device-encryption-community-wizard.spec
     )
+
+# Translations
+set(TRANSLATION_TS_FILES
+        translations/en.ts
+        )
+
+set(TRANSLATION_SOURCE_FILES
+        ${CXX_SRC}
+        ${QML_SRC}
+        )
+
+qt5_create_translation(TRANSLATION_QM_FILES
+        ${TRANSLATION_SOURCE_FILES}
+        ${TRANSLATION_TS_FILES})
+
+add_custom_target(translations ALL DEPENDS ${TRANSLATION_QM_FILES})
 
 # compilation
 add_compile_options(
 )
 
 add_executable(sailfish-device-encryption-community-wizard ${CXX_SRC} ${CXX_HEADERS})
+
+add_dependencies(sailfish-device-encryption-community-wizard translations)
 
 target_compile_definitions(sailfish-device-encryption-community-wizard PRIVATE
     $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>
@@ -60,7 +74,5 @@ install(TARGETS sailfish-device-encryption-community-wizard
 install(DIRECTORY qml
     DESTINATION share/sailfish-device-encryption-community-wizard
 )
-install(DIRECTORY translations
-    DESTINATION share/sailfish-device-encryption-community-wizard
-    FILES_MATCHING PATTERN "*.qm"
-)
+install(FILES ${TRANSLATION_QM_FILES}
+    DESTINATION share/sailfish-device-encryption-community-wizard/translations)
